Increase body widths to address picture layout issues
When setting font size to Very Large in google chrome browser settings
the pictures were displaying on multiple lines instead of just one
line. Increasing the body widths fixed the issue.

--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ html {
 
 body {
   /* font-size: 16px; */
-  width: 725px;
+  width: 730px;
   margin: 8px auto;  /* horizontal centering */
 }
 
 #index-body {
-  width: 881px;
+  width: 886px;
 }
 
 h1,
@@ -55,7 +55,7 @@ ol {
   list-style: none;
   background-color: white;
   padding: 0;
-  width: max-content;
+  /* width: max-content; */
 }
 
 .button {
